# minGPT

./: pyproject.toml
mingpt/: trainer.py
