[tool.poetry]
name = "mingpt"
version = "0.1.0"
description = ""
authors = ["Rico Meinl <rmeinl97@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
torch = "^1.9.0"
numpy = "^1.21.2"
tqdm = "^4.62.2"

[tool.poetry.dev-dependencies]
wandb = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
